--- a/manual/configure_rockbox/theme_settings.tex
+++ b/manual/configure_rockbox/theme_settings.tex
@@ -34,6 +34,7 @@ customize the visual apperance of Rockbox.
   \opt{ipodmini}{\url{http://themes.rockbox.org/index.php?target=ipodmini}}%
   \opt{ipodnano}{\url{http://themes.rockbox.org/index.php?target=ipodnano}}%
   \opt{e200}{\url{http://themes.rockbox.org/index.php?target=e200}}%
+  \opt{e200v2}{\url{http://themes.rockbox.org/index.php?target=e200v2}}%
   \opt{c200}{\url{http://themes.rockbox.org/index.php?target=c200}}%
   \opt{gigabeatf}{\url{http://themes.rockbox.org/index.php?target=gigabeatf}}%
   \opt{gigabeats}{\url{http://themes.rockbox.org/index.php?target=gigabeats}}%
