--- a/manual/rockbox_interface/main.tex
+++ b/manual/rockbox_interface/main.tex
@@ -539,8 +539,8 @@ To turn on and off your Rockbox enabled \dap{} use the following keys:
   \opt{sansaAMS}
     {
     The player will boot into the original firmware if it is powered
-    by a USB connection. That feature might go away in the future if
-    Rockbox can handle USB transfers.
+    by a USB connection. This feature may be removed in the future when
+    Rockbox is able to handle USB transfers natively.
     }
 
   \opt{mrobe100}
