--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -17,7 +17,7 @@
                   \opt{ipodnano}{-72 to +6}%
                   \opt{ipodvideo}{-57 to +6}%
                   \opt{x5}{-73 to +6}
-                  \opt{e200}{-74 to +6}
+                  \opt{e200,e200v2}{-74 to +6}
                   \opt{ipodcolor}{-74 to +6}%
                                         & dB\\
     \nopt{x5}{%
@@ -25,13 +25,13 @@
                   \opt{masf}{-12 to +12}%
                   \opt{h100,h300}{0 to +24}%
                   \opt{ipod}{-6 to +9}%
-                  \opt{e200}{-24 to +24}%
+                  \opt{e200,e200v2}{-24 to +24}%
                                         & dB\\
       treble    & \opt{masd}{-15 to +15}%
                   \opt{masf}{-12 to +12}%
                   \opt{h100,h300}{0 to +6}%
                   \opt{ipod}{-6 to +9}%
-                  \opt{e200}{-24 to +24}%
+                  \opt{e200,e200v2}{-24 to +24}%
                                         & dB\\
     }%
     balance         & -100 to +100      & \%\\
