--- a/manual/getting_started/sansaAMS_install.tex
+++ b/manual/getting_started/sansaAMS_install.tex
@@ -1,35 +1,71 @@
 % $Id: %
 
-In order to make your \playertype{} load and execute the Rockbox
-firmware you have just installed, you will need to install the
-Rockbox bootloader. Unless bugs are found in the bootloader code, or
-significant new features are added, you will only have to perform this
-step once.
+In order to install the bootloader, you will need to download the following
+files:
 
-These steps use the mkamsboot tool. Source code is available in the
-Rockbox SVN repository
-(\url{http://svn.rockbox.org/viewvc.cgi/trunk/rbutil/mkamsboot/}).
+\begin{itemize}
+  \item An original firmware (OF) from 
+    \opt{e200v2}{
+      \url{http://forums.sandisk.com/sansa/board/message?board.id=e200&thread.id=13548}}
+    \opt{fuse}{
+      \url{http://forums.sandisk.com/sansa/board/message?board.id=sansafuse&thread.id=23276}}
+
+  \item The bootloader: 
+    \opt{e200v2}{\download{bootloader/sandisk-sansa/e200v2/bootloader-e200v2.sansa}}
+    \opt{fuze}{\download{bootloader/sandisk-sansa/fuze/bootloader-fuze.sansa}}
+
+  \item The version of mkamsboot for your operating system from
+    \download{bootloader/sandisk-sansa/mkamsboot/}
+\end{itemize}
 
 \subsection{Bootloader installation from Windows}
 
 \begin{enumerate}
 
-% Will add when I have required install instructions %
+\item Create a folder called ``rbinstall'' on your desktop, and then extract
+  the OF, the bootloader and mkamsboot into it.
 
+\item Open a new command prompt, and navigate to the ``rbinstall'' folder.
+
+\item Run mkamsboot.exe, passing the name of the OF and bootloader files that
+  you downloaded, in addition to a name for the output file.
+
+  \begin{code} 
+    \opt{fuze}{mkamsboot.exe fuzea.bin bootloader-fuze.bin patched.bin}
+    \opt{e200v2}{mkamsboot.exe e200pe.bin bootloader-e200v2.bin patched.bin}
+  \end{code}
+ 
+  If mkamsboot.exe does not report success, then retry or abort.
+
+\item Copy the output file (``patched.bin'' in the example given above) to the
+  root of the device and rename it to the same name as the OF file you downloaded earlier 
+  \opt{fuze}{(``fuzea.bin''} \opt{e200v2}{(``e200pe.bin''} above).
+
+\item Safely eject the device, unplug USB and wait for the firmware update to finish.
 \end{enumerate}
 
-\subsection{Bootloader installation from Mac OS X}
+\subsection{Bootloader installation from Mac OS X and Linux}
 
 \begin{enumerate}
 
-% Same as above %
+\item Create a folder called ``rbinstall'' in your home directory, and then
+  extract the OF, the bootloader and mkamsboot into it.
 
-\end{enumerate}
+\item Open a new terminal, and navigate to the ``rbinstall'' folder.
 
-\subsection{Bootloader installation from Linux}
+\item Run mkamsboot, passing the name of the OF and bootloader files that
+  you downloaded, in addition to a name for the output file.
 
-\begin{enumerate}
+  \begin{code} 
+    \opt{fuze}{./mkamsboot fuzea.bin bootloader-fuze.bin patched.bin}
+    \opt{e200v2}{./mkamsboot e200pe.bin bootloader-e200v2.bin patched.bin}
+  \end{code}
+ 
+  If mkamsboot does not report success, then retry or abort.
 
-% Lather rinse repeat %
+\item Copy the output file (``patched.bin'' in the example given above) to the
+  root of the device and rename it to the same name as the OF file you downloaded earlier 
+  \opt{fuze}{(``fuzea.bin''} \opt{e200v2}{(``e200pe.bin''} above).
 
+\item Safely eject the device, unplug USB and wait for the firmware update to finish.
 \end{enumerate}
