--- a/manual/plugins/rockboy.tex
+++ b/manual/plugins/rockboy.tex
@@ -100,7 +100,7 @@ the gnuboy emulator. To start a game, open a ROM file saved as \fname{.gb} or
         Chose whether the original aspect ratio should be kept when scaling
         the picture to the screen%
         % targets with bigger displays than the original gameboy
-        \opt{gigabeat,h300,ipodcolor,ipodvideo,e200}{
+        \opt{gigabeat,h300,ipodcolor,ipodvideo,e200,e200v2}{
             or whether it should be displayed unscaled%
         }.
         \item[Screen Rotate.]
