Remove colon at the end of string since it is also used in settings menu
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22899 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12659,11 +12659,11 @@
   user: core
   <source>
     *: none
-    usb_hid: "USB Keypad Mode:"
+    usb_hid: "USB Keypad Mode"
   </source>
   <dest>
     *: none
-    usb_hid: "USB Keypad Mode:"
+    usb_hid: "USB Keypad Mode"
   </dest>
   <voice>
     *: none
