--- a/apps/lang/hebrew.lang
+++ b/apps/lang/hebrew.lang
@@ -12592,7 +12592,7 @@
   user: core
   <source>
     *: none
-    usb_hid: "USB Keypad Mode:"
+    usb_hid: "USB Keypad Mode"
   </source>
   <dest>
     *: none
