Fixed wording in Hebrew language
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22910 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/hebrew.lang
+++ b/apps/lang/hebrew.lang
@@ -11351,10 +11351,10 @@
     *: "Theme Settings"
   </source>
   <dest>
-    *: "אפשרויות ערכת-נושא"
+    *: "הגדרות ערכת-נושא"
   </dest>
   <voice>
-    *: "אפשרויות ערכת-נושא"
+    *: "הגדרות ערכת-נושא"
   </voice>
 </phrase>
 <phrase>
