Show USB HID mouse mode in manual only in targets which supports it
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22912 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -443,6 +443,7 @@ this option \setting{On}. If it is not required, then turning this setting
           \end{btnmap}
         \end{table}
 
+      {\opt{usb_hid_mouse}{
       \item [Mouse: ]This mode emulates a mouse. Features supported: Mouse
         movement; left and right button clicking; and dragging and dropping.
         \begin{table}
@@ -482,5 +483,6 @@ this option \setting{On}. If it is not required, then turning this setting
             & Mouse wheel scroll up / down, respectively \\
           \end{btnmap}
         \end{table}
+    }}
     \end{description}
 }
