Add missing key map for the beast in manual
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22913 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -274,7 +274,7 @@ this option \setting{On}. If it is not required, then turning this setting
             \opt{GIGABEAT_S_PADIRIVER_H10_PAD}{\ButtonPlay / \ButtonMenu}
             \opt{SANSA_CLIP_PAD}{\ButtonUp / \ButtonHome}
             \opt{IRIVER_H10_PAD}{\ButtonPlay / \ButtonRew}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+            \opt{GIGABEAT_S_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
               {\ButtonPlay / Long \ButtonPlay}
             \opt{MROBE100_PAD}{\ButtonPlay / \ButtonDisplay}
             \opt{HAVEREMOTEKEYMAP}{
