Add H10's mouse buttons in USB HID mode to manual
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22942 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -455,6 +455,8 @@ this option \setting{On}. If it is not required, then turning this setting
               {\ButtonUp / \ButtonDown / \ButtonLeft / \ButtonRight}
             \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
               {\ButtonMenu / \ButtonPlay / \ButtonLeft / \ButtonRight}
+            \opt{IRIVER_H10_PAD}
+              {\ButtonScrollUp / \ButtonScrollDown / \ButtonLeft / \ButtonRight}
             \opt{HAVEREMOTEKEYMAP}{& }
             & Cursor move up / down / left / right, respectively \\
             %
@@ -464,6 +466,7 @@ this option \setting{On}. If it is not required, then turning this setting
               {\ButtonSelect}
             \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
             \opt{MROBE100_PAD}{\ButtonSelect; \ButtonMenu}
+            \opt{IRIVER_H10_PAD}{\ButtonPower}
             \opt{HAVEREMOTEKEYMAP}{& }
             & Left mouse button click \\
             %
@@ -471,7 +474,7 @@ this option \setting{On}. If it is not required, then turning this setting
             \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
             \opt{GIGABEAT_S_PAD}{\ButtonMenu}
             \opt{SANSA_CLIP_PAD}{\ButtonHome}
-            \opt{MROBE100_PAD}{\ButtonPlay}
+            \opt{MROBE100_PAD,IRIVER_H10_PAD}{\ButtonPlay}
             \opt{HAVEREMOTEKEYMAP}{& }
             & Right mouse button click \\
             % Mouse wheel scroll up / down
@@ -479,6 +482,7 @@ this option \setting{On}. If it is not required, then turning this setting
               {\ButtonScrollBack / \ButtonScrollFwd}
             \opt{GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
               {\ButtonVolUp / \ButtonVolDown}
+            \opt{IRIVER_H10_PAD}{\ButtonRew / \ButtonFF}
             \opt{HAVEREMOTEKEYMAP}{& }
             & Mouse wheel scroll up / down, respectively \\
           \end{btnmap}
